# caniuse-embed-fastapi

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  vercel.json  worker.py  wrangler.jsonc  wrangler.toml
app/: constants.py  main.py  server.py  worker.py
app/routers/: compat_data.py  features.py
app/utils/: formatters.py
src/: constants.py  main.py  worker.py
src/routers/: compat_data.py  features.py
static/: caniuse-data.json  mdn-css.json  mdn-data.json
